--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  --bg-black: #222831;
+  --bg-black: #212730;
   --bg-grey-1: #393E46;
   --border-grey: #606060;
   --hr-grey: #505050;
@@ -20,6 +20,7 @@
   --fw-semi-bold: 600;
   --fw-bold: 700;
   --fw-bolder: 800;
+  --gradient-gold: linear-gradient(to right, hsl(45, 100%, 72%), hsl(35, 100%, 68%));
 }
 html {
   box-sizing: border-box;
