added the center section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,8 @@
   --hr-grey: #505050;
   --accent-yellow: #FFD369;
   --font-white-1: #EEEEEE;
-  --font-white-2: #DDDDDD;
+  --font-white-2: #CFCFCF;
+  --fs-smaller: 0.75rem;
   --fs-small: 0.875rem;
   --fs-normal: 1rem;
   --fs-medium: 1.125rem;
