--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -3,6 +3,7 @@ body {
 }
 hr {
   border: 1px solid var(--hr-grey);
+  height: 1px;
   width: 100%;
 }
 .container {
@@ -10,12 +11,14 @@ hr {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: auto;
 }
 .inner-cont {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
   gap: 1.5rem;
-  height: 44rem;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
 }
 .left-cont {
   display: flex;
@@ -24,23 +27,31 @@ hr {
   align-items: center;
   gap: 1.5rem;
   width: 19rem;
-  height: 100%;
-  padding: 1.8rem;
-  border-radius: 25px;
+  height: 770px;
+  padding: 3.5rem 1.8rem 1.8rem 1.8rem;
+  border-radius: 1.625rem;
   background: var(--bg-grey-1);
   border: 1px solid var(--border-grey);
 }
+#img-cont {
+  filter: grayscale(100%);
+  transition: filter .4s ease;
+}
+#img-cont:hover {
+  filter: none;
+}
 .img-cont {
-  width: 10rem;
-  height: 10rem;
+  width: 9rem;
+  height: 9rem;
   overflow: clip;
   border-radius: 1.25rem;
+  pointer-events: none;
+  user-select: none;
 }
-.img-cont > img {
+.img-cont img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: grayscale(100%);
   object-position: top;
 }
 .my-name {
@@ -64,7 +75,7 @@ hr {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.6rem;
 }
 .info {
   /* border: 2px solid blue; */
@@ -73,11 +84,8 @@ hr {
   align-items: center;
   gap: 0.6rem;
 }
-.text p {
-  font-size: var(--fs-small);
-}
-.info-header {
-  color: var(--font-white-2);
+.info:nth-last-child(2) {
+  align-items: flex-start;
 }
 .icon {
   position: relative;
@@ -89,6 +97,10 @@ hr {
   background: linear-gradient(140deg, hsl(0, 0%, 42%), hsl(216, 18%, 16%));
   z-index: 1;
 }
+.icon svg {
+  fill: var(--font-white-2);
+  transition: fill .2s ease;
+}
 .icon::before {
   content: "";
   position: absolute;
@@ -97,8 +109,121 @@ hr {
   border-radius: inherit;
   z-index: -1;
 }
+.info:hover .icon svg {
+  fill: var(--accent-yellow);
+}
 
+.text p {
+  font-size: var(--fs-small);
+}
+.info-header {
+  color: var(--font-white-2);
+}
 
+/* Socials */
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.social-link {
+  width: 1.375rem;
+  height: 1.375rem;
+  fill: var(--font-white-2);
+}
+.social-link:hover {
+  cursor: pointer;
+  fill: var(--font-white-1);
+}
+
+/* Center */
 .center-cont {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  min-width: 60rem;
+  width: 60rem;
+  height: 770px;
+  padding: 1.8rem;
+  border-radius: 1.625rem;
+  background: var(--bg-grey-1);
+  border: 1px solid var(--border-grey);
+}
+.nav-container {
+  position: absolute;
+  padding: 1.2rem 2.8rem;
+  top: 0;
+  right: 0;
+  background: var(--bg-black);
+  border-left: 1px solid var(--border-grey);
+  border-bottom: 1px solid var(--border-grey);
+  border-top-right-radius: 1.625rem;
+  border-bottom-left-radius: 1.625rem;
+}
+.nav-links {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+}
+.nav-link {
+  text-decoration: none;
+  color: var(--font-white-1);
+  font-size: var(--fs-small);
+  font-weight: var(--fw-medium);
+  transition: color .3s ease;
+}
+.nav-link:hover {
+  color: var(--font-white-2);
+}
+.nav-link.active {
+  color: var(--accent-yellow);
+}
+.section-divider {
+  border: 0.188rem solid var(--accent-yellow);
+  width: 3rem;
+  border-radius: 10px;
+}
+.about-cont {
+  display: flex;
+  flex-direction: column;
+  gap: 0.85rem;
+}
+.about-cont h1,
+.about-cont h2{
+  font-weight: var(--fw-semi-bold);
+}
+.about-cont .description p {
+  margin-bottom: 12px;
+}
+.about-cont .description p:last-child {
+  margin-bottom: 0;
+}
+.about-cont .part-2 {
+  margin-top: 1rem;
+}
 
+#projects {
+  display: none;
+}
+
+#contact {
+  display: none;
+}
+
+
+@media screen and (max-width: 1300px) {
+  .inner-cont {
+    flex-direction: column;
+  }
+  .left-cont {
+    margin-top: 15rem;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    align-items: flex-start;
+  }
+  .info-cont {
+    display: none;
+  }
 }
