added missing assets. added tech tags to projects.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   --accent-yellow: #FFD369;
   --font-white-1: #EEEEEE;
   --font-white-2: #CFCFCF;
+  --font-white-3: #BBBBBB;
   --fs-smaller: 0.75rem;
   --fs-small: 0.875rem;
   --fs-normal: 1rem;
