--- a/styles/projects.css
+++ b/styles/projects.css
@@ -40,3 +40,56 @@
   object-fit: cover;
   border-radius: 0.6rem;
 }
+
+.project-description-cont {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  padding: 0.65rem 0;
+}
+
+.project-description-cont .tech-tags {
+  margin-top: 0.15rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.project-description-cont .tech-tag {
+  background: var(--hr-grey);
+  padding: 0.125rem 0.5rem;
+  border-radius: 0.438rem;
+  color: var(--font-white-1);
+  font-size: var(--fs-smaller);
+  filter: none;
+  transition: filter .15s ease;
+}
+
+.project-description-cont .tech-tag:hover {
+  filter: brightness(0.9);
+}
+
+.tech-tag.java {
+  border: 0.063rem solid rgb(106, 82, 62, 1);
+  background: rgba(106, 82, 62, 0.6);
+}
+
+.tech-tag.javafx {
+  border: 0.063rem solid rgba(87, 137, 207, 1);
+  background: rgba(87, 137, 207, 0.6);
+}
+
+.tech-tag.mysql {
+  border: 0.063rem solid rgba(242, 145, 17, 1);
+  background: rgba(242, 145, 17, 0.6);
+}
+
+.project-description-cont h3 {
+  font-size: var(--fs-normal);
+  font-weight: var(--fw-normal);
+}
+
+.project-description-cont p {
+  font-size: var(--fs-small);
+  font-weight: var(--fw-normal);
+  color: var(--font-white-3);
+}
