--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,3 +1,9 @@
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120vh;
+}
 body {
   background: var(--bg-black);
 }
@@ -7,10 +13,10 @@ hr {
   width: 100%;
 }
 .container {
+  width: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 .inner-cont {
   display: flex;
