--- a/styles/projects.css
+++ b/styles/projects.css
@@ -30,26 +30,59 @@
   gap: 2rem;
 }
 
+.project-item:hover {
+  cursor: pointer;
+}
+
 .project-img-cont {
+  position: relative;
   height: 9rem;
+  overflow: hidden;
+  border-radius: 0.6rem;
 }
 
 .project-img-cont img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 0.6rem;
+  transition:
+          transform .3s ease,
+          filter .3s ease;
+}
+
+.project-img-cont svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 3rem;
+  height: 3rem;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.5rem;
+  opacity: 0;
+  fill: var(--accent-yellow);
+  background: var(--bg-grey-1);
+  transition: opacity .3s ease;
+}
+
+.project-img-cont:hover img {
+  transform: scale(1.2);
+  filter: blur(2px) brightness(0.6);
+}
+
+.project-img-cont:hover svg {
+  opacity: 0.9;
 }
 
 .project-description-cont {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.2rem;
   padding: 0.65rem 0;
 }
 
 .project-description-cont .tech-tags {
-  margin-top: 0.15rem;
+  margin-top: 0.25rem;
   display: flex;
   gap: 0.5rem;
 }
@@ -60,7 +93,6 @@
   border-radius: 0.438rem;
   color: var(--font-white-1);
   font-size: var(--fs-smaller);
-  filter: none;
   transition: filter .15s ease;
 }
 
@@ -69,7 +101,7 @@
 }
 
 .tech-tag.java {
-  border: 0.063rem solid rgb(106, 82, 62, 1);
+  border: 0.063rem solid rgba(106, 82, 62, 1);
   background: rgba(106, 82, 62, 0.6);
 }
 
