--- a/styles/main.css
+++ b/styles/main.css
@@ -1,100 +1,127 @@
-html {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 120vh;
-}
+@import url(about-me.css);
+@import url(projects.css);
+
 body {
   background: var(--bg-black);
 }
-hr {
-  border: 1px solid var(--hr-grey);
-  height: 1px;
-  width: 100%;
-}
-.container {
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .inner-cont {
+  margin: 5rem;
   display: flex;
   gap: 1.5rem;
   justify-content: center;
   align-items: center;
 }
-.left-cont {
+
+/**
+ * SIDEBAR
+ */
+.sidebar {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
   width: 19rem;
-  height: 770px;
-  padding: 3.5rem 1.8rem 1.8rem 1.8rem;
+  max-height: 45.675rem;
+  padding: 1.8rem;
   border-radius: 1.625rem;
   background: var(--bg-grey-1);
   border: 1px solid var(--border-grey);
+  overflow: clip;
 }
-/*#img-cont {*/
-/*  filter: grayscale(100%);*/
-/*  transition: filter .4s ease;*/
-/*}*/
-/*#img-cont:hover {*/
-/*  filter: none;*/
-/*}*/
+
+.show-contact-link {
+  display: none;
+}
+
+.side-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+
 .img-cont {
   width: 9rem;
   height: 9rem;
   overflow: clip;
-  border-radius: 1.25rem;
+  border-radius: 1rem;
   pointer-events: none;
   user-select: none;
 }
+
 .img-cont img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: top;
 }
+
+.side-desc-cont {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.8rem;
+}
+
 .my-name {
   text-align: center;
 }
+
 .my-name h2 {
   font-size: var(--fs-xlarge);
   font-weight: var(--fw-medium);
   line-height: 2.5rem;
 }
+
 .role-tag {
+  display: inline-block;
   background: var(--bg-black);
   padding: 0.3rem 1.1rem;
   border-radius: 0.438rem;
 }
+
 .role-tag p {
   font-size: var(--fs-small);
 }
+
+.side-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.side-divider {
+  border: 1px solid var(--hr-grey);
+  height: 1px;
+  width: 100%;
+}
+
 .info-cont  {
-  /* border: 2px solid white; */
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
 }
+
 #email,
 #phone {
   text-decoration: none;
 }
+
 .info {
-  /* border: 2px solid blue; */
   display: grid;
   grid-template-columns: 3rem 1fr;
   align-items: center;
   gap: 0.6rem;
 }
+
 .info:nth-last-child(2) {
   align-items: flex-start;
 }
+
 .icon {
   position: relative;
   border-radius: 0.8rem;
@@ -105,10 +132,12 @@ hr {
   background: linear-gradient(140deg, hsl(0, 0%, 42%), hsl(216, 18%, 16%));
   z-index: 1;
 }
+
 .icon svg {
   fill: var(--font-white-2);
   transition: fill .2s ease;
 }
+
 .icon::before {
   content: "";
   position: absolute;
@@ -117,50 +146,59 @@ hr {
   border-radius: inherit;
   z-index: -1;
 }
+
 .info:hover .icon svg {
   fill: var(--accent-yellow);
 }
+
 .text p {
   font-size: var(--fs-small);
 }
+
 .info-header {
   color: var(--font-white-3);
 }
+
 .text p:not(.info-header) {
   color: var(--font-white-1);
 }
 
-/* Socials */
 .socials {
   display: flex;
   justify-content: center;
   gap: 1rem;
 }
+
 .social-link {
   width: 1.375rem;
   height: 1.375rem;
   fill: var(--font-white-2);
 }
+
 .social-link:hover {
   cursor: pointer;
   fill: var(--font-white-1);
 }
 
-/* Center */
-.center-cont {
+/**
+ * MAIN SECTION
+ */
+.main-content {
   position: relative;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
   min-width: 60rem;
   width: 60rem;
-  height: 770px;
+  height: 45.675rem;
+  max-height: 45.675rem;
   padding: 1.8rem;
   border-radius: 1.625rem;
   background: var(--bg-grey-1);
   border: 1px solid var(--border-grey);
 }
-.nav-container {
+
+.navbar {
   position: absolute;
   padding: 1.2rem 2.8rem;
   top: 0;
@@ -171,21 +209,25 @@ hr {
   border-top-right-radius: 1.625rem;
   border-bottom-left-radius: 1.625rem;
 }
+
 .nav-links {
   display: flex;
   gap: 2rem;
   list-style: none;
 }
+
 .nav-link {
   text-decoration: none;
-  color: var(--font-white-1);
+  color: var(--font-white-2);
   font-size: var(--fs-small);
   font-weight: var(--fw-medium);
   transition: color .3s ease;
 }
+
 .nav-link:hover {
-  color: var(--font-white-2);
+  color: var(--font-white-3);
 }
+
 .nav-link.active {
   color: var(--accent-yellow);
 }
@@ -196,15 +238,18 @@ hr {
   flex-direction: column;
   gap: 1rem;
 }
+
 .section-header h1 {
   font-weight: var(--fw-semi-bold);
 }
+
 .section-header hr {
   margin-top: 0.5rem;
   border: 0.188rem solid var(--accent-yellow);
   width: 3rem;
   border-radius: 10px;
 }
+
 #projects {
   display: none;
 }
@@ -214,3 +259,110 @@ hr {
 }
 
 
+/**
+ * MEDIA QUERIES
+ */
+@media screen and (max-width: 1300px) {
+  .inner-cont {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    position: relative;
+    flex-direction: column;
+    padding: 1.8rem;
+    height: 12.7rem;
+    width: 60rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    overflow: clip;
+    gap: 0;
+    transition: height .3s linear;
+  }
+
+  .sidebar.active {
+    height: 26.7rem;
+  }
+
+  .show-contact-link {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 9rem;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    color: var(--font-white-2);
+    background: var(--bg-black);
+    font-size: var(--fs-small);
+    font-weight: var(--fw-medium);
+    border-left: 1px solid var(--border-grey);
+    border-bottom: 1px solid var(--border-grey);
+    border-radius: 0  1.625rem;
+    padding: 0.7rem 1.3rem;
+    transition: color .3s ease;
+  }
+
+  .show-contact-link:hover {
+    color: var(--font-white-3);
+  }
+
+  .show-contact-link.active {
+    color: var(--accent-yellow);
+  }
+
+  .side-header {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .side-desc-cont {
+    align-items: flex-start;
+  }
+
+  .my-name h2 {
+    text-align: left;
+  }
+
+  .side-content {
+    margin-top: 1.8rem;
+    opacity: 0;
+    width: 100%;
+    transition: opacity .4s linear;
+  }
+
+  .sidebar.active .side-content {
+    opacity: 1;
+  }
+
+  .info-cont {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .socials {
+    grid-column: 1 / 3;
+  }
+}
+
+@media screen and (max-width: 973px) {
+  .sidebar {
+    width: 40rem;
+  }
+
+  .main-content {
+    min-width: 40rem;
+    width: 40rem;
+    max-height: unset;
+    height: auto;
+  }
+
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .project-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
