made project view more user-friendly

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,8 @@ body {
   align-items: center;
   gap: 1.5rem;
   width: 19rem;
-  max-height: 45.675rem;
+  min-height: 48.397rem;
+  max-height: 48.397rem;
   padding: 1.8rem;
   border-radius: 1.625rem;
   background: var(--bg-grey-1);
@@ -190,8 +191,8 @@ body {
   gap: 1.5rem;
   min-width: 60rem;
   width: 60rem;
-  height: 45.675rem;
-  max-height: 45.675rem;
+  min-height: 48.397rem;
+  max-height: 48.397rem;
   padding: 1.8rem;
   border-radius: 1.625rem;
   background: var(--bg-grey-1);
@@ -271,13 +272,15 @@ body {
     position: relative;
     flex-direction: column;
     padding: 1.8rem;
+    min-height: 12.7rem;
     height: 12.7rem;
+    min-width: 60rem;
     width: 60rem;
     align-items: flex-start;
     justify-content: flex-start;
     overflow: clip;
     gap: 0;
-    transition: height .3s linear;
+    transition: height .3s linear, width .35s ease-in-out;
   }
 
   .sidebar.active {
@@ -344,18 +347,24 @@ body {
   .socials {
     grid-column: 1 / 3;
   }
+
+  .main-content {
+    min-height: unset;
+    max-height: unset;
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 973px) {
   .sidebar {
+    min-width: 40rem;
     width: 40rem;
+    transition: height .35s linear, width .3s ease-in-out;
   }
 
   .main-content {
-    min-width: 40rem;
+    min-width: unset;
     width: 40rem;
-    max-height: unset;
-    height: auto;
   }
 
   .cards {
