--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@
   --fw-semi-bold: 600;
   --fw-bold: 700;
   --fw-bolder: 800;
+  --highlight-grey: rgba(72, 78, 87, 0.9);
   --gradient-gold: linear-gradient(to right, hsl(45, 100%, 72%), hsl(35, 100%, 68%));
 }
 
