--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
+  color-scheme: dark;
   --bg-black: #212730;
   --bg-grey-1: #393E46;
   --border-grey: #606060;
@@ -28,15 +29,39 @@
 }
 
 html {
-  box-sizing: border-box;
-  font-size: 100%;
   scroll-behavior: smooth;
 }
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
+}
+
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  font-family: Poppins, sans-serif;
+  color: var(--font-white-1);
+}
+
+img, picture, video, canvas, svg {
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
 }
 
 h1 {
@@ -55,26 +80,5 @@ p {
   font-size: var(--fs-normal);
 }
 
-body {
-  font-family: Poppins, sans-serif;
-  color: var(--font-white-1);
-}
 
-::-webkit-scrollbar {
-  width: 0.6rem;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--bg-black);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--bg-grey-1);
-  border: 1px solid var(--border-grey);
-  border-radius: 3rem;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
 
