--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,22 +1,41 @@
 .contacts {
+  position: relative;
   margin-top: 2rem;
-  border: 1px solid var(--border-grey);
+  background: linear-gradient(
+    to right bottom,
+    rgb(81, 81, 81) 0%,
+    rgba(64, 64, 64, 0) 50%
+  );
   border-radius: 0.7rem;
   padding: 1.5rem 1rem;
+  z-index: 1;
+}
+
+.contacts::before {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  background: var(--bg-black);
+  border-radius: inherit;
+  z-index: -1;
 }
 
 .contacts > p {
-  color: var(--font-white-2);
-}
-
-.contact-info {
-  columns: 3;
-  padding: 2rem 4rem 0 4rem;
+  color: var(--font-white-1);
   text-align: center;
 }
 
+.contact-info {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
 .contact {
+  width: 7.5rem;
   text-decoration: none;
+  text-align: center;
 }
 
 .contact:hover {
@@ -28,7 +47,7 @@
 }
 
 .contact-icon svg {
-  fill: var(--font-white-2);
+  fill: var(--font-white-1);
   transition: fill 0.3s ease;
 }
 
@@ -44,4 +63,18 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.contact-map {
+  margin-top: 0.9rem;
+  width: 100%;
+  height: 24rem;
+  border-radius: 1rem;
+  overflow: clip;
+}
+
+.contact-cont iframe {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1) invert(1);
 }
